--- a/react-ssr/public/index.html
+++ b/react-ssr/public/index.html
@@ -3,7 +3,6 @@
     <title>Sample React Application</title>
   </head>
   <body>
-    <app id="app">
-    </app>
+    <main id="app"></main>
   </body>
 </html>
